--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@ Data/*
 Output/*
 python_env_temp
 FYP
+Writing/Interim_Report/*
+!Writing/Interim_Report/main.tex
+!Writing/Interim_Report/main.pdf
+Writing/Notes_learning/*
+!Writing/Notes_learning/main.tex
+!Writing/Notes_learning/main.pdf
