--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 Data/*
 Output/*
-python_env_temp
-FYP
+python_env_temp/
+FYP/
 Writing/Interim_Report/*
+!Writing/Interim_Report/
 !Writing/Interim_Report/main.tex
 !Writing/Interim_Report/main.pdf
 Writing/Notes_learning/*
-!Writing/Notes_Learning/main.tex
-!Writing/Notes_Learning/main.pdf
+!Writing/Notes_learning/
+!Writing/Notes_learning/main.tex
+!Writing/Notes_learning/main.pdf
