--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ Writing/Interim_Report/*
 !Writing/Interim_Report/
 !Writing/Interim_Report/main.tex
 !Writing/Interim_Report/main.pdf
-Writing/Notes_learning/*
-!Writing/Notes_learning/
-!Writing/Notes_learning/main.tex
-!Writing/Notes_learning/main.pdf
+Writing/Notes_Learning/*
+!Writing/Notes_Learning/
+!Writing/Notes_Learning/main.tex
+!Writing/Notes_Learning/main.pdf
