--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ Writing/Interim_Report/*
 !Writing/Interim_Report/
 !Writing/Interim_Report/main.tex
 !Writing/Interim_Report/main.pdf
+!Writing/Interim_Report/My_Library.bib
 Writing/Notes_Learning/*
 !Writing/Notes_Learning/
 !Writing/Notes_Learning/main.tex
